--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>后台管理系统</title>
+    <title>控制台</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
@@ -27,7 +27,7 @@
 
     <div class="layui-header header">
         <div class="layui-logo layuimini-logo">
-            <h1>后台管理</h1>
+            <h1>控制台</h1>
         </div>
 
         <div class="layuimini-header-content">
